chore: tidy of buttons, latest web and rust libs
